Code/Lexi/html + CSS/css/lab03-CSS.css
body {
   
    font-size: large;
    color: rgba(rgb(216, 111, 111), rgb(250, 252, 250), rgb(167, 167, 209), alpha)
}
h1 {
    justify-content: center;
    background-color: rgb(127, 161, 255);
    font-size: xx-small;
    color: white;
    margin-inline-start: 5rem; /* https://developer.mozilla.org/en-US/docs/Web/CSS/margin-inline-start */
    margin-inline-start: 20px; 
    
}
table {
    background-color: rgb(127, 161, 255);
    font-size: large;
    color: rgba(rgb(216, 111, 111), rgb(120, 167, 120), rgb(167, 167, 209), alpha);
    justify-content: space-evenly;
    background-image: url(../img/law_books.jpg);
}
.container {
    display: flex;
    background-image: url(../img/law_books.jpg);
}
div {
    background-color: green;
    opacity: 0.3;
  }
#page {
    padding: 10px;
    background-color: white;
    height: 90% !important;
}
#page {
    padding: 10px;
    background-color: white;
    height: 90% !important;
}
.active {
    color: red;
}
.changed {
    color: blue;
}

